<resources>
    <string name="app_name">UpSchool-CapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_log_in">Giriş yap</string>
    <string name="text_register">Kayıt ol</string>
    <string name="text_or">ya da</string>
    <string name="text_google_log_in">GOOGLE İLE GİRİŞ YAP</string>
    <string name="text_forgot_password">Şifremi unuttum</string>
    <string name="text_already_account">Henüz hesabın yok mu?</string>
    <string name="text_send">Gönder</string>
    <string name="string_productCategory">Product Category</string>
    <string name="string_productTitle">Product Title</string>
    <string name="string_productPrice">Product Price</string>
    <string name="string_productRate">4.9</string>
    <string name="string_sale_text">Sepette indirim</string>
    <string name="string_empty_bag">Sepetiniz boş</string>
    <string name="string_total">Toplam Tutar:</string>
    <string name="string_bag">Sepet</string>
    <string name="string_home">S-Course</string>
    <string name="button_buy">Satın al</string>
    <string name="string_tl">₺</string>
    <string name="string_fav">Favoriler</string>
    <string name="string_empty_fav">Favoriler boş</string>
    <string name="string_back_button">Back Button</string>
    <string name="string_curve_image">Curve Image</string>
    <string name="string_trash">Trash</string>
    <string name="string_product_image">Product Image</string>
    <string name="string_toolbar_category">Kategoriler</string>
    <string name="string_toolbar_detail">Detay Sayfası</string>
    <string name="string_course_detail">Kurs Detayı</string>
    <string name="string_add_bag">Sepete Ekle</string>
    <string name="string_profile">Profil</string>
    <string name="string_my_fav">Favorilerim</string>
    <string name="string_my_bag">Siparişlerim</string>
    <string name="string_hello">Merhaba,</string>
    <string name="string_forward_button">forward button</string>
    <string name="string_log_out">Çıkış yap</string>
    <string name="string_home_button">Home Button</string>
    <string name="string_reset_pas">Şifreni sıfırlaman için kayıtlı e-mail adresine yeni şifre göndereceğiz.</string>
    <string name="string_75">75%</string>
    <string name="string_welcome">Hoşgeldiniz,</string>
    <string name="string_already_account">Zaten bir hesabın var mı?</string>
    <string name="string_success">Succes</string>
    <string name="string_success_subtitle">S-Course seçtiğiniz için teşekkür ederiz.</string>
    <string name="string_success_text">BAŞARILI!</string>
    <string name="string_count_shop">Alışverişe devam et</string>
    <string name="string_rate">Rate</string>
</resources>