<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="productModel"
            type="com.senaecelik.upschool_capstoneproject.data.model.Product" />
    </data>
    <androidx.cardview.widget.CardView
        android:id="@+id/productCard"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginEnd="@dimen/_23sdp"
        android:layout_margin="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/imageView"
                style="@style/style_card_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/string_product_image" />

            <ImageButton
                android:id="@+id/buttonHeart"
                style="@style/style_heart"
                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="@+id/cardView2"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/string_fav" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:elevation="@dimen/_5sdp"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/productCategory"
                    style="@style/style_text_white_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@{productModel.productCategory}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/string_productCategory" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/productTitle"
                style="@style/style_text_black_norm"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@{productModel.productName}"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:text="@string/string_productTitle" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/product"
                app:layout_constraintTop_toBottomOf="@+id/product">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/exp_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    android:contentDescription="@string/string_rate">

                </ImageView>


                <TextView
                    android:id="@+id/exp_tv"
                    style="@style/style_text_black_norm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{String.valueOf(productModel.productRate)}"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginStart="@dimen/_2sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/product"
                    app:layout_constraintStart_toStartOf="@+id/product"
                    app:layout_constraintTop_toBottomOf="@+id/product"
                    tools:ignore="MissingConstraints"
                    tools:text="@string/string_productRate" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/product"
                style="@style/style_primaryColor_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="@{String.valueOf(productModel.productPrice)}"
                app:layout_constraintStart_toStartOf="@+id/productTitle"
                app:layout_constraintTop_toBottomOf="@+id/productTitle"
                tools:ignore="MissingConstraints"
                tools:text="@string/string_productPrice" />

            <TextView
                android:id="@+id/textView8"
                style="@style/style_primaryColor_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/string_tl"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/product"
                app:layout_constraintStart_toEndOf="@+id/product"
                app:layout_constraintTop_toTopOf="@+id/product"
                app:layout_constraintVertical_bias="0.0">

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView >
</layout>