<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.ForgotPassFragment">

    <TextView
        android:id="@+id/title_login"
        style="@style/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_23sdp"
        android:text="@string/text_forgot_password"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginEnd="31dp"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextField"
            style="@style/regular_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:fontFamily="@font/nun_sans_regular"
        android:text="@string/string_reset_pas"
        android:textColor="@color/grey_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        style="@style/button_general"
        android:layout_marginStart="@dimen/_23sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_23sdp"
        android:text="@string/text_send"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/textField_email"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/textField_email"
        app:layout_constraintTop_toBottomOf="@+id/textField_email"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>