<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginFragment"
            type="com.senaecelik.upschool_capstoneproject.view.auth.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".view.auth.LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_login"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/emailTextField"
                style="@style/regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_23sdp"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/textField_email"
            app:layout_constraintStart_toStartOf="@+id/textField_email"
            app:layout_constraintTop_toBottomOf="@+id/textField_email"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textPassword"
                style="@style/regular_style" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/button_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:clickable="true"
            style="@style/regular_style"
            android:paddingStart="@dimen/size_16"
            android:fontFamily="@font/nun_sans_regular"
            android:text="@string/text_forgot_password"
            android:textColor="@color/grey_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_pass"
            tools:ignore="MissingConstraints,RtlSymmetry"
            android:focusable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/button_general"
            android:layout_marginTop="@dimen/_23sdp"
            android:text="@string/text_log_in"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@+id/textField_pass"
            app:layout_constraintStart_toStartOf="@+id/textField_pass"
            app:layout_constraintTop_toBottomOf="@+id/button_forgot_pass"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_google_log_in"
            style="@style/button_white_general"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/text_google_log_in"
            android:textColor="@color/colorPrimary"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:rippleColor="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/_1sdp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/dontAccount"
                style="@style/regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:gravity="center"
                android:text="@string/text_already_account"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toStartOf="@+id/textBtnRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSend" />

            <TextView
                android:id="@+id/textBtnRegister"
                style="@style/regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                android:textStyle="normal"
                android:focusable="true"
                android:text="@string/text_register"
                android:textColor="@color/grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSend"
                tools:ignore="OnClick" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/text_or"
            style="@style/regular_style"
            android:textColor="@color/grey_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />

        <TextView
            android:id="@+id/title_login"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/text_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/button_google_log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_google_log_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>